--- a/.github/workflows/master_tech0-gen-8-step3-semba-frontend.yml
+++ b/.github/workflows/master_tech0-gen-8-step3-semba-frontend.yml
@@ -27,8 +27,15 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Copy artifact for deployment job
+        run: |
+          mkdir deploy
+          cp -r ./.next/standalone/. ./deploy
+          cp -r ./public ./deploy
+          cp -r ./.next/static/. ./deploy/.next/static
+
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+          release.zip ./deploy -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -58,5 +65,5 @@ jobs:
         with:
           app-name: 'tech0-gen-8-step3-semba-frontend'
           slot-name: 'Production'
-          package: .
+          package: ./deploy
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5697157D0AA1412685785F7EBEA6EB66 }}
