--- a/.github/workflows/master_tech0-gen-8-step3-semba-frontend.yml
+++ b/.github/workflows/master_tech0-gen-8-step3-semba-frontend.yml
@@ -1,9 +1,12 @@
-name: Build and deploy Node.js app to Azure Web App - tech0-gen-8-step3-semba-frontend
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - next14-on-azure20231211
 
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
@@ -24,7 +27,7 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Copy artifact for deployment job
+      - name: Copy artifact for deployment job    # 変更点➀
         run: |
           mkdir deploy
           cp -r ./.next/standalone/. ./deploy
@@ -32,10 +35,10 @@ jobs:
           cp -r ./.next/static/. ./deploy/.next/static
 
       - name: Zip artifact for deployment
-          release.zip ./deploy -r
+        run: zip release.zip ./deploy -r    # 変更点➁
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
           path: release.zip
@@ -49,7 +52,7 @@ jobs:
     
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: node-app
 
@@ -58,9 +61,9 @@ jobs:
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'tech0-gen-8-step3-semba-frontend'
+          app-name: 'next14-on-azure20231211'
           slot-name: 'Production'
-          package: ./deploy
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5697157D0AA1412685785F7EBEA6EB66 }}
+          package: ./deploy    # 変更点➂
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_hogehoge }}
